--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -49,7 +49,7 @@
 
 <div class="container" style="color: black !important;font-family: 'Dosis', sans-serif;">
     <div class="row">
-        <div class="col-lg-6 col-sm-12" style="padding:5% 1%;">
+        <div class="col-lg-5 col-sm-12" style="padding:5% 1%;">
             <p style="font-size: 4rem; font-weight: 700; text-align: center;">WHO WE ARE</p>
             <p style="line-height: 2.0; font-size: 2.0rem;font-weight:500;">
                 Since 1984, SPE IIT(ISM) STUDENT CHAPTER has kept expanding itself to from its being. Taking the oath to help the students, the institute and the society in general, it has been paving an incredible path. From being, one of its kind in the country to
@@ -62,7 +62,7 @@
                 <a href="{% url 'about-page' %}" class="button" style="font-size: 20px;">Read More</a>
             </div>
         </div>
-        <div class="col-lg-6 col-sm-12" style="padding:5% 1%;">
+        <div class="col-lg-5 offset-md-2 col-sm-12" style="padding:5% 1%;">
             <div class="card shadow">
                 <div class="card-header">ANNOUNCEMENTS</div>
                 <div class="card-body">
@@ -101,16 +101,16 @@
 
 <!-- Blogs Section -->
 
-<div class="container-fluid" style=" background-color: #89998e;">
+<div class="container-fluid" style=" background-image: url(../../../media/bg-images/premium3.jpg) !important; background-repeat: no-repeat; background-size: cover;">
     <div class="container" style="padding:5% 0;font-family: 'Dosis', sans-serif; overflow: hidden;">
-        <p style="padding-bottom: 5%;font-size: 4rem; font-weight: 700; text-align: center;">BLOGS</p>
+        <p style="padding-bottom: 5%;font-size: 5rem; font-weight: 700; text-align: center; color: #fff;">BLOGS</p>
         <div class="post">
             <div class="post-left">
                 <div class="post-left_title">What’s fueling the global Things</div>
                 <div class="post-left_title_sub">Popular Blog</div>
                 <div class="post-left_border"></div>
                 <div class="post-left_author">
-                    <img src="#">
+                    <img src="http://127.0.0.1:8000/static/pages/landingpage-bg/chapter-inv-logo.png">
                     <p>Author Name</p>
                 </div>
             </div>
@@ -119,7 +119,6 @@
                     <p><span>T</span>hings are looking challenging for the global downstream market. With MARPOL regulations scheduled to go into effect on January 1 and the energy transition well underway, the outlook is more complex than ever. With that
                         in mind, what can we expect to see within the downstream market? What, besides major factors like MARPOL and the energy transition, will shape the market going forward, and what developments might emerge in the coming few years?
                     </p>
-                    <p>We answered these questions and more at our recent webinar “Three factors fueling the global downstream market.</p>
                 </div>
                 <div class="post-right_footer">
                     <div class="post-right_footer_date">
@@ -175,7 +174,7 @@
     </div>
 </div>
 
-<!-- Our Team Section -->
+<!-- Our Team Section
 <div class="container-fluid" style="background-image: url(https://i.pinimg.com/originals/e9/86/d8/e986d84d458dbf78014805424ecdab3f.png); background-size: cover; margin-bottom: 10%;">
     <div class="container" style="color: black !important;font-family: 'Dosis', sans-serif;">
         <div style="padding:5% 1%;">
@@ -194,7 +193,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 
 
 
