--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -100,7 +100,7 @@
     </nav>
     <!--/.Navbar-->
 
-<br>
+    <br>
 
     <!-- Messages -->
     {% if messages %} {% for message in messages %}
@@ -135,7 +135,7 @@
                         <p><i class="fas fa-phone"></i> Phone: 087098 43266</p>
                         <p><i class="fas fa-envelope"></i> Email: <a href="#">speiitismsc@domain.com</a></p>
                     </div>
-                    <div class="col-md-4 footer-links">
+                    <div class="col-md-3 offset-md-1 footer-links">
                         <div class="row">
                             <div class="col">
                                 <h3>Links</h3>
@@ -148,11 +148,11 @@
                                 <p><a class="imp-link" href="https://parent.iitism.ac.in/index.php/parent_portal/portal0">Parents Portal</a></p>
                                 <p><a class="imp-link" href="https://www.fipi.org.in/">FIPI</a></p>
                             </div>
-<!--                            <div class="col-md-6">-->
-<!--                                <p><a href="#">Gallery</p>-->
-<!--                                <p><a href="#">Contact</a></p>-->
-<!--                                <p><a href="#">Our Team</a></p>-->
-<!--                            </div>-->
+                            <!--                            <div class="col-md-6">-->
+                            <!--                                <p><a href="#">Gallery</p>-->
+                            <!--                                <p><a href="#">Contact</a></p>-->
+                            <!--                                <p><a href="#">Our Team</a></p>-->
+                            <!--                            </div>-->
                         </div>
                     </div>
                 </div>
