Gazette section added and styled

--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -115,7 +115,7 @@
     <!-- Page Content -->
 
     <!-- Scroll to top Button -->
-    <button id="back-to-top-btn">
+    <button id="back-to-top-btn" style="z-index: 3;">
             <i class="material-icons">arrow_upward</i>
         </button>
     <!-- Scroll to top Button -->
