--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -29,46 +29,44 @@
 {% endblock content-blog %} {% block content %}
 <div style="padding-top:100px;"></div>
 <!-- Hero Header -->
-<div class="hero-image" style="margin-top: -14px; overflow: hidden;">
-    <div class="hero-text">
-        <h1 style="font-family: 'Barlow', sans-serif; font-size: 50px; font-weight: 900;" data-aos="fade-down" data-aos-duration="3000">SPE IIT(ISM) STUDENT CHAPTER</h1>
+<div class="page-header" data-parallax="true" style="background-image: url(https://niice.org.np/wp-content/uploads/2020/10/oilene2.jpeg);">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 ml-auto mr-auto">
+                <div class="brand">
+                    <h1>SPE IIT(ISM) STUDENT CHAPTER</h1>
+                </div>
+            </div>
+        </div>
     </div>
-    <a href="#" id="downBtn">
-        <span class="container" style="height: 24px; width: 24px; position: relative; left: 50%; top: 60%;">
-                <div class="chevron"></div>
-                <div class="chevron"></div>
-                <div class="chevron"></div>
-            <!-- <a class="down" href="#">Scroll down</a> -->
-        </span>
-    </a>
 </div>
 <!-- Hero Header end -->
 
 
 <!-- Who we are and announcement section -->
-
-<div class="container" style="color: black !important;font-family: 'Dosis', sans-serif;">
-    <div class="row">
-        <div class="col-lg-5 col-sm-12" style="padding:5% 1%;">
-            <p style="font-size: 4rem; font-weight: 700; text-align: center;">WHO WE ARE</p>
-            <p style="line-height: 2.0; font-size: 2.0rem;font-weight:500;">
-                Since 1984, SPE IIT(ISM) STUDENT CHAPTER has kept expanding itself to from its being. Taking the oath to help the students, the institute and the society in general, it has been paving an incredible path. From being, one of its kind in the country to
-                be the OUTSTANDING STUDENT CHAPTER (2010 & 2015) globally, it has not only brought laurels to the institute but also the country at the global level.
-            </p>
-            <div class="container" style=" padding-top: 50px;
+<div class="main main-raised">
+    <div class="container" style="color: black !important;font-family: 'Dosis', sans-serif;">
+        <div class="row">
+            <div class="col-lg-5 col-sm-12" style="padding:10% 1%;">
+                <p style="font-size: 4rem; font-weight: 700; text-align: center;">WHO WE ARE</p>
+                <p style="line-height: 2.0; font-size: 2.0rem;font-weight:500;">
+                    Since 1984, SPE IIT(ISM) STUDENT CHAPTER has kept expanding itself to from its being. Taking the oath to help the students, the institute and the society in general, it has been paving an incredible path. From being, one of its kind in the country to
+                    be the OUTSTANDING STUDENT CHAPTER (2010 & 2015) globally, it has not only brought laurels to the institute but also the country at the global level.
+                </p>
+                <div class="container" style=" padding-top: 50px;
                 margin: 0 auto;
                 width: 100%;
                 text-align: center;">
-                <a href="{% url 'about-page' %}" class="button" style="font-size: 20px;">Read More</a>
+                    <a href="{% url 'about-page' %}" class="button" style="font-size: 20px;">Read More</a>
+                </div>
             </div>
-        </div>
-        <div class="col-lg-5 offset-md-2 col-sm-12" style="padding:5% 1%;">
-            <div class="card shadow">
-                <div class="card-header">ANNOUNCEMENTS</div>
-                <div class="card-body">
-                    <div class="test">
-                        <marquee direction="up" onmouseover="this.stop();" onmouseout="this.start(); " scrollamount="3">
-                            <p> <b>
+            <div class="col-lg-5 offset-md-2 col-sm-12" style="padding:10% 1%;">
+                <div class="card shadow">
+                    <div class="card-header">ANNOUNCEMENTS</div>
+                    <div class="card-body">
+                        <div class="test">
+                            <marquee direction="up" onmouseover="this.stop();" onmouseout="this.start(); " scrollamount="3">
+                                <p> <b>
                          <br> <a href="#">
                     1   .&nbsp;Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</a>
                              <br>
@@ -85,10 +83,11 @@
                     4  .&nbsp;There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable</a>
                              <br>  
                             </b></p>
-                        </marquee>
-                        <br>
-                        <br>
+                            </marquee>
+                            <br>
+                            <br>
 
+                        </div>
                     </div>
                 </div>
             </div>
@@ -144,18 +143,19 @@
 <!-- Jquery Counter end-->
 
 <!-- Social Media Cards -->
-<div class="container" style="padding: 5% 0;">
-    <div class="row">
-        <div class="col-md-4">
-            <div class="card shadow">
-                <div class="card-header">Facebook</div>
-                <div class="card-body" style="line-height: 24px;">
-                    <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fspeismsc%2F&tabs=timeline&width=300&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="300" height="350"
-                        style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+<div class="main main-raised">
+    <div class="container" style="padding: 5% 0;">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card shadow">
+                    <div class="card-header">Facebook</div>
+                    <div class="card-body" style="line-height: 24px;">
+                        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fspeismsc%2F&tabs=timeline&width=300&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="300" height="350"
+                            style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+                    </div>
                 </div>
             </div>
-        </div>
-        <!-- <div class="col-md-4">
+            <!-- <div class="col-md-4">
             <div class="card shadow">
                 <div class="card-header">Facebook</div>
                 <div class="card-body" style="line-height: 24px;">
@@ -171,32 +171,63 @@
                 </div>
             </div>
         </div> -->
-    </div>
-</div>
-
-<!-- Our Team Section
-<div class="container-fluid" style="background-image: url(https://i.pinimg.com/originals/e9/86/d8/e986d84d458dbf78014805424ecdab3f.png); background-size: cover; margin-bottom: 10%;">
-    <div class="container" style="color: black !important;font-family: 'Dosis', sans-serif;">
-        <div style="padding:5% 1%;">
-            <p style="font-size: 4rem; font-weight: 700; text-align: center;">KNOW OUR TEAM</p>
-            <p style="line-height: 2.0; font-size: 2.0rem;font-weight:500;">
-                Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up
-                one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de
-                Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..",
-                comes from a line in section 1.10.32. The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their
-                exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
-            <div class="container" style=" padding-top: 50px;
-                margin: 0 auto;
-                width: 100%;
-                text-align: center;">
-                <a href="core-team.html" class="button" style="font-size: 20px;">Click Here</a>
-            </div>
         </div>
     </div>
-</div> -->
 
 
+    <!-- Gazette Section -->
+    <div class="container" style="color: black !important;font-family: 'Dosis', sans-serif; margin-bottom: 8%;">
+        <div class="row">
+            <div class="col-lg-5 col-sm-12" style="padding:5% 1%; margin-bottom: 8%;">
+                <p style="font-size: 4rem; font-weight: 700; text-align: center;">GAZETTE 2020</p>
+                <div class="card-gazette" style="background-image: url('../../../media/blog_images/oilrig_q8U2v17.jpg')">
+                    <div class="gazette-body">
+                        <h3 class="card-title">ILLUSTRATING UNCONVENTIONAL PASSION</h3>
+                        <p class="card-description">
+                            <div class="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id, eveniet nam. Repellat explicabo unde voluptas dolor dolore totam sequi molestias, aut beatae dicta adipisci. Alias quos itaque tempore modi ut.</div>
+                        </p>
+                        <a href="#" class="btn btn-danger btn-round">
+                            <i class="material-icons">subject</i> Read
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <!-- <div class="col-lg-5 offset-md-2 col-sm-12" style="padding:5% 1%;">
+                <div class="card shadow">
+                    <div class="card-header">ANNOUNCEMENTS</div>
+                    <div class="card-body">
+                        <div class="test">
+                            <marquee direction="up" onmouseover="this.stop();" onmouseout="this.start(); " scrollamount="3">
+                                <p> <b>
+                         <br> <a href="#">
+                    1   .&nbsp;Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</a>
+                             <br>
+                         <br>                 
+                             <a href="#">
+                    2   .&nbsp;It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. </a>
+                             <br>
+                         <br>                    
+                             <a href="#">
+                    3   .&nbsp;Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words</a>
+                             <br>
+                         <br>
+                         <a href="#">
+                    4  .&nbsp;There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable</a>
+                             <br>  
+                            </b></p>
+                            </marquee>
+                            <br>
+                            <br>
 
+                        </div>
+                    </div>
+                </div>
+            </div> -->
+        </div>
+    </div>
+
+
+</div>
 
 <script>
     $(document).ready(function() {
