--- a/SPE-website/pages/static/pages/home.css
+++ b/SPE-website/pages/static/pages/home.css
@@ -4,136 +4,47 @@
 
 /* HEADER STYLES */
 
-.hero-image {
-    /* linear-gradient(rgba(2, 17, 43, 0.5), rgba(2, 17, 43, 0.5)), */
-    background-image: url("https://s1.cdn.autoevolution.com/images/news/crude-oil-trading-well-below-30-us-tax-plan-raised-to-1025-a-barrel-104501_1.jpg");
-    height: 600px;
-    background-position: center;
-    background-repeat: no-repeat;
+.page-header {
+    height: 100vh;
+    background-position: center center;
     background-size: cover;
-    position: relative;
-    clip-path: polygon(0 0, 100% 0, 100% 62%, 0 89%);
-}
-
-.hero-text {
-    text-align: center;
-    position: absolute;
-    text-transform: uppercase;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-}
-
-.hero-text button {
-    border: none;
-    outline: 0;
-    display: inline-block;
-    padding: 10px 25px;
-    color: black;
-    background-color: #ddd;
-    text-align: center;
-    cursor: pointer;
-}
-
-.hero-text button:hover {
-    background-color: #555;
-    color: white;
-}
-
-
-/* Scroll down animation */
-
-
-/* body {
+    margin: 0;
+    padding: 0;
+    border: 0;
     display: flex;
-    justify-content: center;
+    height: 200px;
     align-items: center;
+}
+
+.page-header .page-header-image {
     position: absolute;
+    background-size: cover;
+    background-position: center center;
     width: 100%;
-    height: 100%;
-    background: #333;
+    z-index: -1;
 }
 
-.container {
+.main {
+    background: #ffffff;
     position: relative;
-    width: 24px;
-    height: 24px;
-} */
-
-.chevron {
-    position: absolute;
-    width: 28px;
-    height: 8px;
-    opacity: 0;
-    transform: scale3d(0.5, 0.5, 0.5);
-    animation: move 3s ease-out infinite;
+    z-index: 3;
 }
 
-.chevron:first-child {
-    animation: move 3s ease-out 1s infinite;
+.main-raised {
+    margin: -60px 30px 0px;
+    border-radius: 6px;
+    box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
 }
 
-.chevron:nth-child(2) {
-    animation: move 3s ease-out 2s infinite;
-}
-
-.chevron:before,
-.chevron:after {
-    content: ' ';
-    position: absolute;
-    top: 0;
-    height: 100%;
-    width: 51%;
-    background: #fff;
-}
-
-.chevron:before {
-    left: 0;
-    transform: skew(0deg, 30deg);
-}
-
-.chevron:after {
-    right: 0;
-    width: 50%;
-    transform: skew(0deg, -30deg);
-}
-
-@keyframes move {
-    25% {
-        opacity: 1;
-    }
-    33% {
-        opacity: 1;
-        transform: translateY(30px);
-    }
-    67% {
-        opacity: 1;
-        transform: translateY(40px);
-    }
-    100% {
-        opacity: 0;
-        transform: translateY(55px) scale3d(0.5, 0.5, 0.5);
+@media (max-width: 830px) {
+    .main-raised {
+        margin-left: 10px;
+        margin-right: 10px;
     }
 }
 
-.text {
-    display: block;
-    margin-top: 75px;
-    margin-left: -30px;
-    font-family: "Helvetica Neue", "Helvetica", Arial, sans-serif;
-    font-size: 12px;
-    color: #fff;
-    text-transform: uppercase;
-    white-space: nowrap;
-    opacity: .25;
-    animation: pulse 2s linear alternate infinite;
-}
-
-@keyframes pulse {
-    to {
-        opacity: 1;
-    }
+.main.main-raised {
+    margin-top: -30px;
 }
 
 
@@ -282,4 +193,19 @@
 }
 
 
-/* Counter Animation */
+/* Gaztte Card Section */
+
+.card-gazette {
+    border: 0;
+    margin-bottom: 30px;
+    margin-top: 30px;
+    border-radius: 6px;
+    color: rgba(0, 0, 0, .87);
+    background: #fff;
+    width: 100%;
+    height: 100%;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px 5px 0 rgba(0, 0, 0, .12);
+    background-position: 50%;
+    background-size: cover;
+    text-align: center;
+}
