--- a/SPE-website/pages/static/pages/home.css
+++ b/SPE-website/pages/static/pages/home.css
@@ -24,6 +24,9 @@
     z-index: -1;
 }
 
+
+/* Raised card effect styles */
+
 .main {
     background: #ffffff;
     position: relative;
@@ -46,6 +49,9 @@
 .main.main-raised {
     margin-top: -30px;
 }
+
+
+/* Raised card effect styles end */
 
 
 /* Read more button */
@@ -196,16 +202,15 @@
 /* Gaztte Card Section */
 
 .card-gazette {
-    border: 0;
     margin-bottom: 30px;
     margin-top: 30px;
     border-radius: 6px;
-    color: rgba(0, 0, 0, .87);
-    background: #fff;
-    width: 100%;
-    height: 100%;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px 5px 0 rgba(0, 0, 0, .12);
-    background-position: 50%;
+    box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
     background-size: cover;
     text-align: center;
+    position: relative;
+    min-height: 280px;
+    padding: 40px 40px;
+    max-width: 440px;
+    margin: 0 auto;
 }
