--- a/SPE-website/pages/static/pages/home.css
+++ b/SPE-website/pages/static/pages/home.css
@@ -25,6 +25,53 @@
 }
 
 
+/* Header text effect */
+
+.text {
+    display: inline-block;
+    font-size: 8rem;
+    font-weight: 700;
+}
+
+.text__first,
+.text__second {
+    position: relative;
+}
+
+.text__word {
+    opacity: 0;
+}
+
+.text__first-bg,
+.text__second-bg {
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 100;
+    transform-origin: left;
+    transform: scaleX(0);
+}
+
+.text__second-bg {
+    width: 160%;
+}
+
+.text__first-bg {
+    background-color: #0634b3;
+}
+
+.text__second-bg {
+    background-color: #14a0ca;
+}
+
+.text__second {
+    margin-left: 15vmin;
+}
+
+
 /* Raised card effect styles */
 
 .main {
