--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -35,7 +35,7 @@
 <div style="padding-top:100px;"></div>
 <!-- Hero Header -->
 <div class="page-header" data-parallax="true" style="background-image: url(../../../media/bg-images/premium4.jpeg); height: 500px;">
-    <div class="container" style="text-align:center;">
+    <div class="container" style="text-align:center; overflow: hidden;">
         <p class="text"> <span class="text__first"><span class="text__word" style="font-size: 4rem;">WELCOME TO</span><span class="text__first-bg"></span></span><br/><span class="text__second"><span class="text__word">SPE IIT(ISM) STUDENT CHAPTER</span>
             <span class="text__second-bg"></span>
             </span>
@@ -141,35 +141,83 @@
 <!-- Blog Section End -->
 
 <!-- Jquery Counter -->
-
-<!-- Jquery Counter end-->
-
-<!-- Social Media Cards -->
-<div class="main main-raised">
-    <div class="container" style="padding: 5% 1%;">
-        <div class="row">
-            <div class="col-md-4" data-aos="fade-up" data-aos-duration="1000">
-                <div class="card shadow">
-                    <div class="card-header">Facebook</div>
-                    <div class="card-body" style="line-height: 24px;">
-                        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fspeismsc%2F&tabs=timeline&width=300&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="300" height="350"
-                            style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
-                    </div>
-                </div>
-            </div>
-            <!-- <div class="col-md-4">
-                    <div class="card shadow">
-                        <div class="card-header">Facebook</div>
-                        <div class="card-body" style="line-height: 24px;">
-                            <iframe src="" width="300" height="250" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+<!-- CountDown Area Start -->
+<div class="count-area">
+    <div class="container">
+        <div class="count-wrapper count-bg" style="background-image:url(https://i.pinimg.com/originals/7f/0c/38/7f0c38d0510ac7648c89a90d7e40829c.jpg);">
+            <div class=" row justify-content-center ">
+                <div class="col-lg-4 col-md-4 col-sm-6 ">
+                    <div class="count-clients ">
+                        <div class="single-counter ">
+                            <div class="count-number">
+                                <span class="counter">1000</span>
+                            </div>
+                            <div class="count-text ">
+                                <p>lorem ipsum</p>
+                                <h5>text</h5>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="card shadow">
-                        <div class="card-header">Facebook</div>
-                        <div class="card-body" style="line-height: 24px;">
-                            <iframe src="" width="300" height="250" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+                <div class="col-lg-4 col-md-4 col-sm-6 ">
+                    <div class="count-clients ">
+                        <div class="single-counter ">
+                            <div class="count-number ">
+                                <span class="counter">1500</span>
+                            </div>
+                            <div class="count-text ">
+                                <p>lorem ipsum</p>
+                                <h5>pro</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-6 ">
+                    <div class="count-clients ">
+                        <div class="single-counter ">
+                            <div class="count-number ">
+                                <span class="counter">1800</span>
+                            </div>
+                            <div class="count-text ">
+                                <p>lorem ipsum</p>
+                                <h5>text</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- CountDown Area End -->
+<!-- Jquery Counter end-->
+
+<!-- Social Media Cards -->
+<div class="main main-raised ">
+    <div class="container " style="padding: 5% 1%; ">
+        <div class="row ">
+            <div class="col-md-4 " data-aos="fade-up " data-aos-duration="1000 ">
+                <div class="card shadow ">
+                    <div class="card-header ">Facebook</div>
+                    <div class="card-body " style="line-height: 24px; ">
+                        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fspeismsc%2F&tabs=timeline&width=300&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId
+            " width="300 " height="350 " style="border:none;overflow:hidden " scrolling="no " frameborder="0 " allowTransparency="true " allow="encrypted-media "></iframe>
+                    </div>
+                </div>
+            </div>
+            <!-- <div class="col-md-4 ">
+                    <div class="card shadow ">
+                        <div class="card-header ">Facebook</div>
+                        <div class="card-body " style="line-height: 24px; ">
+                            <iframe src=" " width="300 " height="250 " style="border:none;overflow:hidden " scrolling="no " frameborder="0 " allowTransparency="true " allow="encrypted-media "></iframe>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 ">
+                    <div class="card shadow ">
+                        <div class="card-header ">Facebook</div>
+                        <div class="card-body " style="line-height: 24px; ">
+                            <iframe src=" " width="300 " height="250 " style="border:none;overflow:hidden " scrolling="no " frameborder="0 " allowTransparency="true " allow="encrypted-media "></iframe>
                         </div>
                     </div>
                 </div> -->
@@ -178,24 +226,21 @@
 
 
     <!-- Gazette Section -->
-    <div class="container" style="color: black !important;font-family: 'Dosis', sans-serif; margin-bottom: 8%;">
-        <div class="row">
-            <div class="col-lg-5 col-sm-12" style="padding:5% 1%; margin-bottom: 8%;" data-aos="fade-right" data-aos-duration="2000">
-                <p style="font-size: 4rem; font-weight: 700; text-align: center;">GAZETTE 2020</p>
-                <div class="card-gazette" style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../../../media/blog_images/oilrig_q8U2v17.jpg')">
-                    <div class="gazette-body">
-                        <h3 class="card-title" style="font-weight: 500; font-size: 2.5rem; color:#fff;">ILLUSTRATING UNCONVENTIONAL PASSION</h3>
-                        <p class="card-description">
-                            <div style="color: hsla(0,0%,100%,.7)!important; padding: 5% 0%;">"Illustrating Unconventional Passion" presents to you a collection of successful start-ups led by the passionate and audacious entrepreneurs with a dream to transform the Oil & Gas industry.</div>
+    <div class="container " style="color: black !important;font-family: 'Dosis', sans-serif; margin-bottom: 8%; ">
+        <div class="row ">
+            <div class="col-lg-5 col-sm-12 " style="padding:5% 1%; margin-bottom: 8%; " data-aos="fade-right " data-aos-duration="2000 ">
+                <p style="font-size: 4rem; font-weight: 700; text-align: center; ">GAZETTE 2020</p>
+                <div class="card-gazette " style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url( '../../../media/blog_images/oilrig_q8U2v17.jpg') ">
+                    <div class="gazette-body ">
+                        <h3 class="card-title " style="font-weight: 500; font-size: 2.5rem; color:#fff; ">ILLUSTRATING UNCONVENTIONAL PASSION</h3>
+                        <p class="card-description ">
+                            <div style="color: hsla(0,0%,100%,.7)!important; padding: 5% 0%; ">"Illustrating Unconventional Passion " presents to you a collection of successful start-ups led by the passionate and audacious entrepreneurs with a dream to transform the Oil & Gas industry.</div>
                         </p>
-                        <!-- <a href="#" class="btn btn-danger btn-round ">
+                        <!-- <a href="# " class="btn btn-danger btn-round ">
                                     <i class="material-icons ">subject</i> Read
                                 </a> -->
-                        <div class="container" style="
-                                    margin: 0 auto;
-                                    width: 100%;
-                                    text-align: center;">
-                            <a href="#" class="button" style="font-size: 20px;">Read more</a>
+                        <div class="container " style=" margin: 0 auto; width: 100%; text-align: center; ">
+                            <a href="# " class="button " style="font-size: 20px; ">Read more</a>
                         </div>
                     </div>
                 </div>
@@ -233,12 +278,9 @@
                     </div> -->
         </div>
     </div>
-
-
 </div>
 <!--For header text animation-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js "></script>
 <script>
     // Header text envelope animation
     window.onload = function() {
@@ -258,7 +300,7 @@
             })
             .to(word, 0.1, {
                 opacity: 1
-            }, "-=0.1")
+            }, "-=0.1 ")
             .to(firstBg, 0.2, {
                 scaleX: 0
             })
@@ -267,5 +309,11 @@
             });
     }
 </script>
-
+<!-- Counter Animation -->
+<script type="text/javascript">
+    $('.counter').counterUp({
+        delay: 10,
+        time: 1000
+    });
+</script>
 {% endblock content %}
