--- a/SPE-website/pages/templates/pages/about.html
+++ b/SPE-website/pages/templates/pages/about.html
@@ -54,7 +54,7 @@
 
 <!-- ACHIEVEMENTS OF THE CHAPTER -->
 <div class="parallax" style="background-image: url(../../../media/about_images/department.png) !important;
-    height: 340%;
+    height: 500%;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -74,11 +74,10 @@
 
                     <div class="timeline-content timeline-card js--fadeInRight">
                         <div class="timeline-img-header">
-                            <h2>OUTSTANDING STUDENT CHAPTER AWARD</h2>
+                            <h2>Best Student Chapter Award</h2>
                         </div>
-                        <div class="date">Year 2010</div>
-                        <p>First of its kind in India, buoyed by the department, the chapter brought wreaths globally when it won the OUTSTANDING STUDENT CHAPTER AWARD in the year 2010. The award was presented to the chapter taking in view the distinctive
-                            level of participation during a single academic session. </p>
+                        <div class="date">Year 2016</div>
+                        <p>Petrotech IIT (ISM) student chapter won the Best Student Chapter Award 2016. Became the first runner up for Best Presentation Award at 7th annual convention of Petrotech chapters at MIT Pune.</p>
                     </div>
 
                 </div>
@@ -89,10 +88,10 @@
 
                     <div class="timeline-content timeline-card js--fadeInRight">
                         <div class="timeline-img-header">
-                            <h2>OUTSTANDING STUDENT CHAPTER AWARD</h2>
+                            <h2>Gold Standard Award and Outstanding Student Chapter Award</h2>
                         </div>
-                        <div class="date">Year 2015</div>
-                        <p>As it says "It's easy to win but it's difficult to keep it". The chapter triumphed in retaining this status in 2015 by being again bestowed with the same award.</p>
+                        <div class="date">Year 2016, 2015, 2013, 2012, 2011, 2010</div>
+                        <p>SPE IIT (ISM) student chapter won the Gold Standard Award in 2016, 2013, 2012, 2011 and Outstanding Student Chapter Award 2015 and 2010. Hosted the SPE South Asia Regional Meet of 2016.</p>
                     </div>
 
                 </div>
@@ -104,10 +103,10 @@
 
                     <div class="timeline-content timeline-card js--fadeInRight">
                         <div class="timeline-img-header">
-                            <h2>GOLD STATUS AWARD</h2>
+                            <h2>PetroBowl Asia Pacific Regional Qualifiers</h2>
                         </div>
-                        <div class="date">Year 2011-2014</div>
-                        <p>It has been a constant awardee of the GOLD STATUS AWARD successively in the years 2011-2014, preserving its performance in the category of membership, event planning and professionalism. </p>
+                        <div class="date">Year 2020</div>
+                        <p>Debosmit Banerjee, Nikhil Singh Kushwah, Suyash Aakash, Aman Kumar and Anurag Jain won the PetroBowl Asia Pacific Regional Qualifiers 2020. The team won accolades by securing the first position among 34 participating teams.</p>
                     </div>
 
                 </div>
@@ -118,24 +117,80 @@
 
                     <div class="timeline-content timeline-card js--fadeInRight">
                         <div class="timeline-img-header">
-                            <h2>SUB REGIONAL PAPER MEET</h2>
+                            <h2>International Petroleum Technology Conference</h2>
                         </div>
-                        <div class="date">Year 2012 & 2016</div>
-                        <p>The chapter conducted SUB REGIONAL PAPER MEET in the years 2012 and 2016, where participants throughout the country presented their meticulous work, making it a huge success.</p>
+                        <div class="date">Year 2020</div>
+                        <p>Debosmit Banerjee represented IIT (ISM) at the International Petroleum Technology Conference (IPTC) 2020. His team won the 1st Position in Schlumberger’s Case Study at IPTC 2020.</p>
                     </div>
 
                 </div>
 
-                <div class="timeline-item" data-aos="flip-left" data-aos-duration="1500">
+                <div class="timeline-item" data-aos="flip-right" data-aos-duration="1500">
 
                     <div class="timeline-img"></div>
 
-                    <div class="timeline-content timeline-card js--fadeInLeft">
+                    <div class="timeline-content timeline-card js--fadeInRight">
                         <div class="timeline-img-header">
-                            <h2>SOCIAL CONTRIBUTIONS</h2>
+                            <h2>RSPC and SPE Annual Technical Conference and Exhibition</h2>
                         </div>
-                        <p>In its endeavours to extend its social responsibilities, the chapter has conducted events like "GIVING TUESDAY" and setting up blood donation camps coordinating with "FAST FORWARD INDIA" an Institute founded NGO.</p>
+                        <div class="date">Year 2019</div>
+                        <p> Prithvi Singh Chauhan won SPE South Asia Regional Student Paper Contest (RSPC), 2019 and represented IIT (ISM) at SPE Annual Technical Conference and Exhibition (ATCE) 2019.</p>
                     </div>
+
+                </div>
+                <div class="timeline-item" data-aos="flip-right" data-aos-duration="1500">
+
+                    <div class="timeline-img"></div>
+
+                    <div class="timeline-content timeline-card js--fadeInRight">
+                        <div class="timeline-img-header">
+                            <h2>Indian Youth delegation to China</h2>
+                        </div>
+                        <div class="date">Year 2019</div>
+                        <p>Ajink Gupta, Debosmit Banerjee and Harshit Pathak represented India as a part of the Indian Youth delegation to China 2019 sponsored by the Ministry of Youth Affairs and Sports, Government of India.
+                        </p>
+                    </div>
+
+                </div>
+                <div class="timeline-item" data-aos="flip-right" data-aos-duration="1500">
+
+                    <div class="timeline-img"></div>
+
+                    <div class="timeline-content timeline-card js--fadeInRight">
+                        <div class="timeline-img-header">
+                            <h2>BRICS Youth Energy Outlook</h2>
+                        </div>
+                        <div class="date">Year 2020</div>
+                        <p>Prithvi Chauhan, Debosmit Banerjee, Shubham Agarwal, Aman Kumar and Suyash Vatsa were the Champions of the BRICS Youth Energy Outlook 2020 reflecting on the need of the youth workforce to collaborate actively to produce positive
+                            social change.</p>
+                    </div>
+
+                </div>
+                <div class="timeline-item" data-aos="flip-right" data-aos-duration="1500">
+
+                    <div class="timeline-img"></div>
+
+                    <div class="timeline-content timeline-card js--fadeInRight">
+                        <div class="timeline-img-header">
+                            <h2>SPE/IADC Middle East Drilling Technology Conference and Exhibition</h2>
+                        </div>
+                        <div class="date">Year 2016</div>
+                        <p>A delegation of 5 students represented IIT(ISM) at SPE/IADC Middle East Drilling Technology Conference and Exhibition held at Abu Dhabi in 2016.</p>
+                    </div>
+
+                </div>
+                <div class="timeline-item" data-aos="flip-right" data-aos-duration="1500">
+
+                    <div class="timeline-img"></div>
+
+                    <div class="timeline-content timeline-card js--fadeInRight">
+                        <div class="timeline-img-header">
+                            <h2>IMTR Award</h2>
+                        </div>
+                        <div class="date">Year 2016, 2017</div>
+                        <p>Sunil Kumar and Nilanjan Pal won the IMTR Award in 2016 and 2017, respectively.</p>
+                    </div>
+
                 </div>
             </div>
         </section>
